<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            app:title="@string/base_setting"
    >

        <EditTextPreference
                app:key="@string/key_show_content"
                app:title="@string/title"
                app:useSimpleSummaryProvider="true"/>
        <SwitchPreferenceCompat
                app:key="@string/key_remind"
                app:title="@string/remind"
                app:summary="@string/summary_remind"
        />
        <ListPreference
                app:key="@string/key_remind_time"
                app:title="@string/remind_time_title"
                app:entries="@array/remind_time"
                app:entryValues="@array/remind_time_values"
                app:dependency="@string/key_remind"
                app:useSimpleSummaryProvider="true"
        />
    </PreferenceCategory>

</PreferenceScreen>
